cabal-version:      2.4
name:               liquid-parsers
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jaro Reinders
maintainer:         jaro.reinders@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable liquid-parsers
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    liquid-base, liquidhaskell
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -fplugin=LiquidHaskell
